[package]
name = "describe_err"
version = "1.0.1"
authors = ["Cerber Ursi <dev+rust@cerbe.ru>"]
edition = "2018"
description = "Easily describe similar errors in your code"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Cerber-Ursi/describe_err"
categories = ["development-tools::debugging"]

[dependencies]
thiserror = "1.0"
